# AXRB

./: .gitignore  CMakeLists.txt  README.md
android-runtime/: CMakeLists.txt  input.cpp  pose_client.cpp  pose_client.h  session.cpp  session.h  swapchain.cpp
android-runtime-apk/: AndroidManifest.xml  build_apk.sh
android-runtime-apk/res/values/: strings.xml
android-runtime-apk/src/com/axrb/openxrruntime/: ImageProxy.java  RuntimeBrokerProvider.java
android-runtime/extensions/: README.md
android-runtime/openxr_dispatch/: openxr_minimal.h  runtime_entry.cpp
android-runtime/runtime_manifest/: active_runtime.json
container/: apk_launch.sh  runtime_install.sh  waydroid_setup.md  wsl_port_forward.py
docs/: encoded_video_transport.md  hardware_vulkan_waydroid.md  linux_gpu_transport.md
host-bridge/: CMakeLists.txt  compositor_submit.cpp  main.cpp  monado_backend.cpp  openxr_host.cpp  openxr_host.h  pose_stream.cpp  steamvr_backend.cpp
protocol/: CMakeLists.txt  clock_sync.cpp  gpu_frame.h  gpu_transport.cpp  gpu_transport.h  image_frame.h  image_transport.cpp  image_transport.h  messages.fbs  pose_frame.h  transport_shm.cpp  transport_tcp.cpp  transport_tcp.h  video_packet.h  video_transport.cpp  video_transport.h
tests/: CMakeLists.txt  gpu_transport_smoke.cpp  runtime_smoke.cpp  video_transport_smoke.cpp
tests/android_loader_probe/: AndroidManifest.xml  README.md  build_apk.sh
tests/android_loader_probe/native/: CMakeLists.txt  loader_probe.cpp
tests/android_loader_probe/src/com/axrb/loaderprobe/: MainActivity.java
tests/android_openxr_loader_probe/: AndroidManifest.xml  README.md  build_apk.sh
tests/android_openxr_loader_probe/native/: CMakeLists.txt  openxr_loader_probe.cpp
tests/android_openxr_loader_probe/src/com/axrb/openxrloaderprobe/: MainActivity.java  RuntimeBrokerProvider.java
tests/hello_xr/: CMakeLists.txt  README.md
tests/latency_test/: README.md
tests/unity_openxr/: README.md
tools/: waydroid_vulkan_probe.sh
tools/d3d12_shared_probe/: README.md  start_wsl_producer.sh  windows_consumer.cpp  windows_producer.cpp  wsl_producer.cpp
